fix second button mobile styling

--- a/components/LandingPage/CTA/CTA.module.scss
+++ b/components/LandingPage/CTA/CTA.module.scss
@@ -1,7 +1,7 @@
 .container {
     margin: $grid;
     text-align: left;
-    margin-bottom: $grid * 2;
+    margin-bottom: $grid * 3;
 
     @include media-query(medium) {
         margin: $grid $grid * 2 $grid * 3 $grid * 2;
@@ -32,5 +32,11 @@
 }
 
 .academyButton {
-    margin-top: $grid * 2;
+    margin-top: $grid * 1.5;
+    max-width: 300px;
+
+    @include media-query(medium) {
+        margin-top: $grid * 2;
+        max-width: unset;
+    }
 }
